Bug 282586 - Last directory should be remembered for File->Open
Summary: Last directory should be remembered for File->Open
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-22 22:36 UTC by Bernhard Beschow
Modified: 2011-09-22 22:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-09-22 22:36:29 UTC
Version:           unspecified (using Devel) 
OS:                Linux

The last used directory for File->Open should be remembered for usability reasons.

Reproducible: Always

Steps to Reproduce:
1) File->Open
2) navigate to a directory other than the home directory
3) open a file
4) restart Marble
5) File->Open

Actual Results:  
the current directory is the home directory

Expected Results:  
the current directory is the last directory used
Comment 1 Bernhard Beschow 2011-09-22 22:54:42 UTC
Git commit a58532e96bdd444cd479bc57ea50ef0b91749480 by Bernhard Beschow.
Committed on 22/09/2011 at 23:35.
Pushed by beschow into branch 'master'.

main window: remember last File->Open'ed directory

BUG: 282586

M  +8    -1    src/QtMainWindow.cpp
M  +2    -0    src/QtMainWindow.h
M  +5    -0    src/marble.kcfg
M  +10   -1    src/marble_part.cpp
M  +2    -0    src/marble_part.h

http://commits.kde.org/marble/a58532e96bdd444cd479bc57ea50ef0b91749480