main window: remember last File->Open'ed directory

BUG: 282586